2004-11-04  Tor Lillqvist  <tml@iki.fi>

	* glib/goption.h (enum GOptionFlags): Add G_OPTION_FLAG_REVERSE,
	to reverse the sense of a G_OPTION_ARG_NONE (boolean) option.

	* glib/goption.c (parse_arg): Obey the above flag.

	* glib/gconvert.c (g_filename_display_name): Document that the
	result is guaranteed to be non-NULL.

	* glib/gfileutils.c (get_contents_stdio, get_contents_regfile,
	get_contents_posix, get_contents_win32, g_file_open_tmp,
	g_file_read_link): Use g_filename_display_name() for error
	messages.
	(g_mkstemp): Document that the template should be in the GLib file
	name encoding.
	(g_file_open_tmp): Ditto. Also document that the actual name
	returned is also in the GLib file name encoding.

2004-11-02  Matthias Clasen  <mclasen@redhat.com>

	* glib/gconvert.c (g_filename_display_name): New function 
	to convert a filename to a UTF-8 string for display 
	purposes.  (requested by Alex Larsson)
	
	* glib/gconvert.c (g_get_filename_charsets): New function 
	to return the encodings which are tried when converting a 
	filename to UTF-8. (#151465, François Gagné)

2004-11-02  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

	* === Released 2.5.5 ===

	* NEWS: Updates

2004-11-02  Matthias Clasen  <mclasen@redhat.com>

	* glib/glib.symbols: Add new functions.

	* glib/gconvert.c: Fix doc comment for 
	g_get_filename_charsets().

	* glib/gconvert.c (g_filename_display_name): New function to
	convert a filename to a UTF-8 string for display purposes.
	(g_get_filename_charsets): New function to return the 
	encodings which are tried when converting a filename to 
	UTF-8.

	* glib/goption.c (g_option_context_parse): Document that
	this function may not return.

2004-11-01  Matthias Clasen  <mclasen@redhat.com>

	* glib/gutils.h: Make gtkdoc-scan happy by removing spaces
	between gchar and *.

2004-11-01  Tor Lillqvist  <tml@iki.fi>

	* glib/gstdio.c (g_lstat): Implement correctly also on Unix